tests/scripts/errors/lex/unterminated_dq_string.cdo
VAR s = "this string never closes;
print(s);
